crates/parser/tests/snapshots/surface_parser_test__m12_literals.snap
---
source: crates/parser/tests/surface_parser_test.rs
expression: module
---
decls:
  - DefFn:
      name: test_int
      visibility: Private
      params: []
      constraints: []
      return_type:
        Named:
          name: Int
          span:
            - 31
            - 34
      body:
        Lit:
          value:
            Int: 42
          span:
            - 37
            - 39
      span:
        - 13
        - 39
  - DefFn:
      name: test_float
      visibility: Private
      params: []
      constraints: []
      return_type:
        Named:
          name: Float
          span:
            - 60
            - 65
      body:
        Lit:
          value:
            Float: 3.14
          span:
            - 68
            - 72
      span:
        - 40
        - 72
  - DefFn:
      name: test_bool
      visibility: Private
      params: []
      constraints: []
      return_type:
        Named:
          name: Bool
          span:
            - 92
            - 96
      body:
        Lit:
          value:
            Bool: true
          span:
            - 99
            - 103
      span:
        - 73
        - 103
  - DefFn:
      name: test_string
      visibility: Private
      params: []
      constraints: []
      return_type:
        Named:
          name: String
          span:
            - 125
            - 131
      body:
        Lit:
          value:
            String: hello
          span:
            - 134
            - 141
      span:
        - 104
        - 141
  - DefFn:
      name: test_unit
      visibility: Private
      params: []
      constraints: []
      return_type:
        Named:
          name: Unit
          span:
            - 161
            - 165
      body:
        Lit:
          value: Unit
          span:
            - 168
            - 170
      span:
        - 142
        - 170
